--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./images/academlo-icon-shadow.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +13,11 @@
   <body>
     <nav>
       <img src="./images/logo_nombre.png" alt="logo_name">
-      <button class="car__toggle">
+      <button class="cart__toggle">
         <i class="fa-solid fa-cart-shopping"></i>
       </button>
       <!--Panel Carrito de Compras-->
-      <div class="car__block" id="car">
+      <div class="cart__block" id="car">
         <div id="car__list">
         </div>
         <button class="empty__button" id="empty__cart">Empty cart</button>
@@ -30,22 +30,17 @@
       <h3>Todos nuestros productos</h3>
       <!--Lista de productos-->
       <div id="products-container" class="principal__container">
-
       </div>
       <!--Modal Contenedor-->
       <div id="modal-container" class="modal__elements">
         <div>
-
         </div>
         <div>
           <i class="fa-sharp fa-solid fa-x icon__close__modal"></i>
         </div>
         <div id="modal" class="element-modal">
-
         </div>
-
       </div>
-     
     </main>
     <script src="https://kit.fontawesome.com/092155fa28.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
